--- a/public/css/valerie.css
+++ b/public/css/valerie.css
@@ -6,6 +6,7 @@ body{
 }
 
 
+
 .carrito table {
 	width: 100%;
 }
@@ -14,7 +15,7 @@ body{
 	background-color: #093D42;
 	font-size: 25px;
 	color: white;
-	text-align: center;
+	text-align: right;
 	padding: 5px;
 	/* border-radius: 15px; */
 }
@@ -37,27 +38,13 @@ a:visited {
 	color: #CBDCDD;
 }
 
-
-
 #subcontainer {
-
-display: flex;
-
-/* align-items: center; */
-
-justify-content: space-between;
-
-/*margin-left: 5em;
-
-margin-right: 5em;*/
-
-flex: 2 4 20%;
-
-margin-bottom: 3em;
-
-flex-wrap: wrap;
-
-/* background: red; */
+	display: flex;
+	justify-content: space-between;
+	margin-right: 20px;
+	flex: 2 4 20%;
+	flex-wrap: wrap;
+	align-content: flex-start;
 }
 
 .title{
@@ -84,39 +71,35 @@ flex-wrap: wrap;
 	margin-bottom: 2em;
 }
 
-#oneprod {
+#oneprod {display: block;align-items: center;/* margin-left: 7em; *//* margin-right: 7em; *//* flex: 2 4 20%; *//* margin-bottom: 2em; *//* max-width: 960px; */margin: 0 auto;max-width: 960px;margin-top: 2em;}
 
-	display: block;
-	align-items: center;
-	justify-content: justify;
-	margin-left: 7em;
-	margin-right: 7em;
-	flex: 2 4 20%;
-	margin-bottom: 2em;
+.titulo-bonito{margin: 0 auto;text-align: left;font-weight: bold;/* margin-right: 100px; */}
+
+.name-prod {
+	font-size: 1.5em;
 }
-
-.titulo-bonito{
-
-margin: .5em 0;
-
-font-weight: bold;
-}
-
 
 .product {
-	font-size: 0.8em;
-	border-color: black;
-	max-width: 7em;
-	min-height: 7em;
-	min-width: 7em;
-	margin: 1em;
-	text-align: justify;
+    font-size: 0.8em;
+    border-color: black;
+    width: 33.3%;
+    text-align: justify;
+    box-sizing: border-box;
+    padding: 20px;
+    position: relative;
+    padding-bottom: 28px;
+}
+
+@media (max-width: 1024) {
+	.product {
+		max-width: 50%;
+	}
 }
 
 .product .titulo-bonito a {
 
 	display: block;
-	color: black;
+	color: #093D42;
 	text-decoration: none;
 
 }
@@ -141,13 +124,65 @@ font-weight: bold;
 }
 
 .prod_imagen_grande img {
+	height: auto;
+	width: 10em;
+	max-width: 100%;
+}
 
-	max-width: 15em;
-	max-height: 15em;
+.text-columns{
+	display: inline-flex;
+}
+
+.left-panel {
+	float: left;
+	max-width: 50%;
+	/* margin-top: .2em; */
+}
+
+.right-panel {
+	float: right;
+	box-sizing: border-box;
+	max-width: 50%;
+}
+
+/*.image_to_zoom:hover {
+	transform: scale(2);
+}*/
+
+div.overlay {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+	text-align: center;
+	background: black;
+}
+
+div.overlay > img.zoomed {
+	display: inline-block;
+	height: 100%;
+}
+
+div.overlay > button.close {
+	background: black;
+	border: 1px solid white;
+	color: white;
+	border-radius: 50%;
+	min-height: 30px;
+	min-width: 30px;
+	position: absolute;
+	top: 4px;
+	right: 4px;
+	outline: 0;
+}
+
+div.overlay > button.close:hover {
+	color: red;
 }
 
 .small_text {
-
 	font-size: 0.75em;
 }
 
@@ -158,7 +193,7 @@ font-weight: bold;
 	color: #043935;
 	text-decoration: none;
 	font-weight: bold;
-
+	font-size: .7em;
 }
 
 .category a  {
@@ -169,9 +204,10 @@ font-weight: bold;
 }
 
 .prod_imagen {
-    max-height: 170px;
+    height: 170px;
     overflow: hidden;
     margin: 0.5em 0;
+    /* display: none; */
 }
 
 .small img {
@@ -182,13 +218,15 @@ font-weight: bold;
 /* max-height: 5em; */
 }
 .text {
-    height: 3em;
     /* vertical-align: middle; */
     line-height: 1em;
     position: relative;
     text-overflow: ellipsis;
     /* white-space: pre-line; */
     /* overflow: hidden; */
+    font-size: 0.7em;
+    line-height: 1.5em;
+    text-align: justify;
 }
 
 
@@ -225,7 +263,6 @@ font-weight: bold;
 }
 
 .review-title {
-	margin: 1em;
 }
 
 .small-text {
@@ -290,8 +327,9 @@ a.side-links.current {
 	max-height: 45px;
 }
 .cart {
-	display: flex;
-	flex-direction: column;
+    position: absolute;
+    right: 16px;
+    bottom: 0;
 }
 .carrito {
 
@@ -300,8 +338,96 @@ a.side-links.current {
 .table-tags {
 	max-width: 100px;
 }
-
+/*
 .name a {
 	text-decoration: none;
 	color: black;
+}*/
+
+span.price {
+    background: #a5b7b9;
+    /* font-weight: normal; */
+    color: white;
+    border-radius: 20px;
+    font-size: 17px;
+    height: 27px;
+    min-width: 30px;
+    display: inline-block;
+    vertical-align: top;
+    line-height: 27px;
+    text-align: center;
+    padding: 0 5px;
+    position: absolute;
+    right: 62px;
+    bottom: 7px;
+}
+
+.small-text {
+    font-size: .5em;
+    line-height: 1.5em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+.show_reviews {
+    clear: both;
+    padding-top: 2em;
+}
+
+.price {/* margin-left: .4em; */padding: 0.3em 0;}
+
+.four-thumbnails {
+    float: left;
+    width: 20%;
+    margin-right: 5%;
+}
+
+.thumbnail img {
+    max-width: 100%;
+}
+
+.prod_imagen_grande {
+    max-width: 75%;
+    display: inline-block;
+}
+
+span.btns {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.btns form {
+    display: inline-block;
+}
+
+.btns button {
+    background: none;
+    color: white;
+    border: 0;
+    text-decoration: underline;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.cart-selector input[type="submit"] {
+    background: url(body/cart.png) no-repeat center;
+    background-size: cover;
+    border: 0;
+    height: 3em;
+    width: 4em;
+}
+
+form.cart-selector {
+    display: inline-block;
+}
+
+.navbar .container {
+    max-width: 1280px;
+    display: block;
+    margin: 0 auto;
+}
+
+.pagination li {
+	display:inline;
 }
